--- a/style.css
+++ b/style.css
@@ -85,15 +85,8 @@ img {
   margin-left: 9rem;
 }
 
-.wrapp-content {
+.section1 {
   display: flex;
-  flex-direction: row;
-}
-
-.wrapp-image img{
-  display: flex;
-  flex-direction: row;
-  
 }
 
 form {
