--- a/style.css
+++ b/style.css
@@ -261,6 +261,16 @@ footer {
   .wrapp-images a {
     text-align: center;
   }
+
+  .image-ed img {
+    margin: 0 auto;
+    width: 15rem;
+    border-radius: 2rem;
+  }
+  .avisos {
+    font-size: 2.8rem;
+  }
+  
 }
 
 @media screen and (max-width: 400px) {
@@ -310,5 +320,17 @@ footer {
   .wrapp-images a {
     text-align: center;
   }
+  .image-ed img {
+    margin: 0 auto;
+    width: 15rem;
+    border-radius: 2rem;
+  }
+  .avisos {
+    font-size: 2.8rem;
+  }
+  .list {
+    font-size: 2.8rem;
+  }
+  
 }
 
