--- a/style.css
+++ b/style.css
@@ -259,6 +259,9 @@ footer {
 }
 
 @media screen and (max-width: 720px) {
+  h1{
+    text-align: center;
+  }
   header {
     flex-direction: column;
   }
@@ -330,6 +333,9 @@ footer {
 }
 
 @media screen and (max-width: 460px) {
+  h1{
+    text-align: center;
+  }
   header {
     display: flex;
     margin-inline: 2rem;
