--- a/style.css
+++ b/style.css
@@ -19,15 +19,14 @@ body {
   font-family:'Poppins', sans-serif;
   margin: 0 auto;
   font-size: 1.6rem;
-  
 }
 
 header {
-  /* position: fixed;
+  position: fixed;
   width: 100vw;
   right: 0;
   left: 0;
-  top: 0; */
+  top: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -36,12 +35,6 @@ header {
   max-width: 1200px;
   padding: 1.5rem;
 }
-
-/* header.scroll {
-  margin-left: 40rem;
-  background-color: black;
-  width: 100%;
-} */
 
 .logo {
   flex-direction: column;
@@ -88,6 +81,7 @@ main {
   margin-top: 5rem;
   max-width: 1200px;
   padding: 1.5rem;
+  padding-top: 12rem;
 }
 
 h2 {
@@ -406,5 +400,9 @@ footer {
     text-align: center;
   }
   
+}
+
+.wrapp-content, .image-profile{
+  visibility: hidden;
 }
 
