--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--generalColor);
+  background-color: #333;
   border-radius: 2rem;
   border-color: var(--generalColor);
   width: 20rem;
@@ -457,6 +457,11 @@ footer {
   text-transform: unset;
   font-family: 'Poppins', sans-serif; 
   font-weight: 600;
+}
+
+#cv:hover {
+  background-color: var(--generalColor);
+  cursor: pointer;
 }
 
 
