--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ footer {
 
 }
 
-@media screen and (max-width: 460px) {
+@media (max-width: 460px) {
   h1{
     text-align: center;
   }
@@ -435,7 +435,94 @@ footer {
    width: 5rem;
   }
   
+}
+
+
+@media (max-width: 460px) {
+  h1{
+    text-align: center;
+  }
+  header {
+    width: 90%;
+    position: unset;
+    display: flex;
+    margin-inline: 2rem;
+    flex-direction: column;
+  }
+
+  main{
+    padding: 0;
+  }
+
+  section{
+    flex-direction: column;
+  }
+
+  .section1{
+    margin: 0;
+  }
+  h2 {
+    font-size: 2.8rem;
+  }
+
+  .wrapp-content {
+    margin-top: 0;
+    text-align: center;
+  }
+
+  .wrapp-content h3 {
+    font-size: 2rem;
+  }
+  .image-profile{
+    margin-top: 6rem;
+    width: 30rem;
+    margin-inline: 5rem;
+  }
+  ul {
+    text-align: center;
+  }
+  .wrapp-contain {
+    flex-direction: column;
+    font-size: 1.5rem;
+  }
+
+  .wrapp-contain p {
+    font-size: 1.5rem;
+  }
+
+  .wrapp-contain img{
+    margin-top: 5rem;
+    width: 30rem;
+  }
   
+  .wrapp-images img {
+    width: 8rem;
+  }
+
+  .wrapp-images-bot img {
+    width: 11rem;
+  }
+
+  .projects-git {
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+    margin-top: 2rem;
+  }
+
+  .projects-git img{
+    margin: 0 auto;
+    width: 35rem;
+  }
+
+  .projects-git a {
+    text-align: center;
+  }
+
+  #cv {
+   margin: 0 auto;
+   width: 5rem;
+  }
 }
 
 .wrapp-content, .image-profile{
@@ -463,5 +550,77 @@ footer {
   background-color: var(--generalColor);
   cursor: pointer;
 }
+
+.hamburger-menu {
+  display: none;
+}
+
+@media (max-width: 470px) {
+  .hamburger-menu {
+    display: block;
+    position: absolute;
+    top: 2rem;
+    right: 1rem;
+    width: 3rem;
+    height: 3rem;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    z-index: 1000;
+  }
+
+  ul {
+    display: none;
+  }
+
+  .hamburger-menu__bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin-bottom: 5px;
+    background-color: white;
+    border-radius: 3px;
+    transition: transform 0.2s ease-out;
+  }
+
+  .hamburger-menu__bar:last-child {
+    margin-bottom: 0;
+  }
+
+}
+
+#init ul.show {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(34, 34, 34);
+  z-index: 999;
+}
+
+#init ul.show li {
+  margin: 0;
+  padding: 20px;
+  border-bottom: 1px solid white;
+}
+
+#init ul.show li:last-child {
+  border-bottom: none;
+}
+
+#init ul.show a {
+  color: white;
+}
+
+#init ul.show a:hover {
+  color: #ffc107;
+}
+
+
+
 
 
