--- a/style.css
+++ b/style.css
@@ -531,6 +531,10 @@ footer {
   visibility: hidden;
 }
 
+.hamburger-menu{
+  visibility: hidden;
+}
+
 
 /*Depois voltar com essa estilização p/ colocar o CV
 
